# swift

./: CMakeLists.txt
stdlib/: CMakeLists.txt
stdlib/cmake/modules/: XcodeExternalProject.cmake
stdlib/public/Darwin/: CMakeLists.txt
stdlib/public/Darwin/CoreFoundation/: CMakeLists.txt
stdlib/public/Darwin/CoreGraphics/: CMakeLists.txt
stdlib/public/Darwin/Foundation/: CMakeLists.txt
stdlib/public/Differentiation_Future/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg
utils/: build-script  build-script-impl
utils/build_swift/build_swift/: driver_arguments.py
utils/build_swift/tests/: expected_options.py
utils/swift_build_support/swift_build_support/: workspace.py
validation-test/BuildSystem/: dsymutil_jobs.test  extractsymbols-filter.test  extractsymbols-none.test  extractsymbols.test  no_relocate_xdg_cache_home_under_build_subdir.test
